# cosmic-app-template

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  README_TEMPLATE.md  ask-license.rhai  cargo-generate.toml  justfile  placeholder-defaults.rhai  prehook_script.rhai  rename-ftl.rhai  rename-readme.rhai
res/: app.desktop
src/: app.rs  i18n.rs  main.rs
