[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
license = "{{license}}"
edition = "2021"
repository = "{{repository}}"
description = "{{proj-description}}"

[dependencies]
futures-util = "0.3.31"
i18n-embed-fl = "0.9.2"
open = "5.3.0"
rust-embed = "8.5.0"
tokio = { version = "1.41.0", features = ["full"] }

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[target.'cfg(target_os = "linux")'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # GPU-accelerated rendering
    "wgpu",
]

# For OSes other than Linux, the following features must be turned off:
# - xdg-portal
# - wayland
[target.'cfg(not(target_os = "linux"))'.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "a11y",
    "dbus-config",
    "multi-window",
    "single-instance",
    "tokio",
    "winit",
    "wgpu",
]
